<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAvata"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/rounded_img_user"
        android:src="@drawable/ic_user"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="77dp"
        />
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="77dp"
        android:text="@string/DangXuat"
        android:background="@drawable/rounded_img_user"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/imgAvata"
        android:weightSum="8"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/btnYeuThich"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@drawable/ripple_press"
            android:text="@string/yeuthich"
            android:gravity="center"
            android:clickable="true"
            android:layout_marginRight="6dp"/>

        <TextView
            android:id="@+id/btnLichSu"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@drawable/ripple_press"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/lichsudonhang"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_below="@id/linear"
        android:layout_marginTop="2dp"
        android:background="@drawable/ripple_press">
            <EditText
                android:id="@+id/txtName"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_sentiment"
                android:text="Name"
                android:textSize="16sp"
                android:enabled="false"

                />
            <ImageButton
                android:id="@+id/btnSuaName"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_edit"
                android:scaleType="center"
                android:background="@null"
                />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_below="@id/linear1"
        android:layout_marginTop="2dp"
        android:background="@drawable/ripple_press">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Email"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_email"
                android:textSize="16sp"
                />
            <ImageButton
                android:id="@+id/btnSuaMail"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_edit"
                android:scaleType="center"
                android:layout_marginTop="8dp"
                android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear2"
        android:weightSum="10"
        android:layout_marginTop="2dp"
        android:background="@drawable/ripple_press">

            <EditText
                android:id="@+id/txtSDT"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="SDT"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_phone"
                android:textSize="16sp"
                />
            <ImageButton
                android:id="@+id/btnSuaSDT"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_edit"
                android:layout_marginTop="8dp"
                android:scaleType="center"
                android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear3"
        android:weightSum="10"
        android:layout_marginTop="2dp"
        android:background="@drawable/ripple_press">
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="wrap_content"
                android:text="Password"
                android:enabled="false"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_pass"
                android:inputType="textPassword"
                />
            <ImageButton
                android:id="@+id/btnSuaPass"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_edit"
                android:scaleType="center"
                android:background="@null"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnXacnhan"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Xacnhan"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/linear4"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/btnHuy"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/Huy"
        android:layout_below="@id/linear4"
        android:layout_toRightOf="@id/btnXacnhan"
        android:visibility="invisible"/>
</RelativeLayout>